correct unit test